--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Rosy Glow - Process</title>
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 <link rel="stylesheet" type="text/css" href="css/grid.css">
+<link rel="shortcut icon" type="image/png" href="images/icons/favicon.png"/>
 </head>
 
 <body>
@@ -15,8 +16,6 @@
         
         <nav>
 
-            <h3>Menu</h3>
-
             <ul>
                 <li><a href="pages/prologue.html">Prologue</a></li>
                 <li><a href="pages/visual.html">Visual Research</a></li>
@@ -25,7 +24,7 @@
                 <li><a href="pages/resources.html">Resources</a></li>
             </ul>
 
-    </nav>
+        </nav>
 
         <div class="sidebar">
             <h1>/</h1>
