--- a/pages/prologue.html
+++ b/pages/prologue.html
@@ -5,6 +5,7 @@
 <title>Rosy Glow - Process</title>
 <link rel="stylesheet" type="text/css" href="../css/styles.css">
 <link rel="stylesheet" type="text/css" href="../css/grid.css">
+<link rel="shortcut icon" type="image/png" href="../images/icons/favicon.png"/>
 </head>
 
 <body>
