--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="pages/prologue.html">Prologue</a></li>
                 <li><a href="pages/visual.html">Visual Research</a></li>
                 <li><a href="pages/sprints.html">Design Sprints</a></li>
-                <li><a href="pages/resources.html">Process Diary</a></li>
+                <li><a href="pages/process.html">Process Diary</a></li>
                 <li><a href="pages/resources.html">Resources</a></li>
             </ul>
 
