--- a/pages/resources.html
+++ b/pages/resources.html
@@ -93,10 +93,10 @@
                 
                 <h3><a href="https://experiments.withgoogle.com/ai/ai-duet/view/" target="_blank">AI Duet</a></h3>
                 <h3><a href="https://dotpiano.com/B8Qrr73OAzN" target="_blank">Dot Piano</a></h3>
-                <h3><a href="https://dotpiano.com/B8Qrr73OAzN" target="_blank">Computerized Forms</a></h3>
+                <h3><a href="http://computerizedforms.com/" target="_blank">Computerized Forms</a></h3>
                 <h3><a href="http://www.georgeandjonathan.com/#1" target="_blank">George and Jonathan</a></h3>
                 <h3><a href="https://experiments.withgoogle.com/ai/sound-maker/view/" target="_blank">NSynth</a></h3>
-                <h3><a href="https://patatap.com/">Patatap</a></h3>
+                <h3><a href="https://patatap.com/" target="_blank">Patatap</a></h3>
                 <h3><a href="http://sampulator.com/ashleyford/energetic-youth" target="_blank">Sampulator</a></h3>
                 <h3><a href="http://jviewz.com/#/dna" target="_blank">The DNA Project</a></h3>
             
