--- a/pages/resources.html
+++ b/pages/resources.html
@@ -99,6 +99,7 @@
                 <h3><a href="https://patatap.com/" target="_blank">Patatap</a></h3>
                 <h3><a href="http://sampulator.com/ashleyford/energetic-youth" target="_blank">Sampulator</a></h3>
                 <h3><a href="http://jviewz.com/#/dna" target="_blank">The DNA Project</a></h3>
+                <h3><a href="http://player.whitestone.io/Daedelus/music/Labyrinths" target="_blank">Whitestone Project</a></h3>
             
             </section>
             
