--- a/pages/resources.html
+++ b/pages/resources.html
@@ -92,6 +92,7 @@
                 <h4>Web Projects</h4>
                 
                 <h3><a href="https://experiments.withgoogle.com/ai/ai-duet/view/" target="_blank">AI Duet</a></h3>
+                <h3><a href="http://audiograph.xyz/" target="_blank">Audiograph</a></h3>
                 <h3><a href="https://dotpiano.com/B8Qrr73OAzN" target="_blank">Dot Piano</a></h3>
                 <h3><a href="http://computerizedforms.com/" target="_blank">Computerized Forms</a></h3>
                 <h3><a href="http://www.georgeandjonathan.com/#1" target="_blank">George and Jonathan</a></h3>
