--- a/pages/resources.html
+++ b/pages/resources.html
@@ -96,6 +96,7 @@
                 <h3><a href="https://dotpiano.com/B8Qrr73OAzN" target="_blank">Dot Piano</a></h3>
                 <h3><a href="http://computerizedforms.com/" target="_blank">Computerized Forms</a></h3>
                 <h3><a href="http://www.georgeandjonathan.com/#1" target="_blank">George and Jonathan</a></h3>
+                <h3><a href="https://learningmusic.ableton.com/" target="_blank">Ableton - Learning Music</a></h3>
                 <h3><a href="https://experiments.withgoogle.com/ai/sound-maker/view/" target="_blank">NSynth</a></h3>
                 <h3><a href="https://patatap.com/" target="_blank">Patatap</a></h3>
                 <h3><a href="http://sampulator.com/ashleyford/energetic-youth" target="_blank">Sampulator</a></h3>
